# luma-backend-rust

./: .env  .env.example  Cargo.toml  docker-compose.yml  dockerfile
.github/workflows/: jenkins.yml
docs/: Luma API.postman_collection.json
postgres/: docker-compose.yml
postgres/db/: init.sql
src/: config.rs  db.rs  init.sql  main.rs  openai.rs  pinecone.rs  vecdb.rs
src/handlers/: mod.rs  user.rs
src/middleware/: mod.rs
src/models/: mod.rs  user.rs
src/services/: user.rs
testing/: api.py
